Fixed anchoring when jumping to section

--- a/ucloud_theme/static/ucloud.css
+++ b/ucloud_theme/static/ucloud.css
@@ -2260,3 +2260,8 @@ hr.dash {
     border: 1px dashed black;
     width: 95%;
 }
+
+section {
+    padding-top: 70px;
+    margin-top: -85px;
+}
